force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Describes the complaints and/or RMA&apos;s which can be summarized into one topic, called issue.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>ISS-{0000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>