force-app/main/default/objects/Issue__c/fields/Actions_to_Prevent_Reoccurence__c.field-meta.xml
<CustomField>
    <fullName>Actions_to_Prevent_Reoccurence__c</fullName>
    <label>Actions to Prevent Reoccurence</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>