force-app/main/default/objects/Issue__c/fields/Affected_Products__c.field-meta.xml
<CustomField>
    <fullName>Affected_Products__c</fullName>
    <inlineHelpText>Enter the Product Names which are affected by this Issue</inlineHelpText>
    <label>Affected Products</label>
    <length>50</length>
    <type>Text</type>
</CustomField>