force-app/main/default/objects/Issue__c/fields/Communicate_Results__c.field-meta.xml
<CustomField>
    <fullName>Communicate_Results__c</fullName>
    <label>Communicate Results</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>