force-app/main/default/objects/Issue__c/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Choose the Complaint which is related to this Issue.</description>
    <inlineHelpText>Choose the Complaint which is related to this Issue.</inlineHelpText>
    <label>Complaint</label>
    <referenceTo>Complaint__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>