force-app/main/default/objects/Issue__c/fields/Containment_Action__c.field-meta.xml
<CustomField>
    <fullName>Containment_Action__c</fullName>
    <label>Containment Action</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>