force-app/main/default/objects/Issue__c/fields/Implement_Perm_Corr_Actions__c.field-meta.xml
<CustomField>
    <fullName>Implement_Perm_Corr_Actions__c</fullName>
    <label>Implement Perm. Corr. Actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>