force-app/main/default/objects/Issue__c/fields/Permanent_Corrective_Actions__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Corrective_Actions__c</fullName>
    <label>Permanent Corrective Actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>