force-app/main/default/objects/Issue__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <inlineHelpText>Please insert detailled information</inlineHelpText>
    <label>Problem Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>