force-app/main/default/objects/Issue__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Choose the RMA which is related to this Issue.</description>
    <inlineHelpText>Choose the RMA which is related to this Issue.</inlineHelpText>
    <label>RMA</label>
    <referenceTo>RMA__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>