force-app/main/default/objects/Issue__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Enter a meaningful keyword for this Issue</inlineHelpText>
    <label>Short Description</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>