force-app/main/default/objects/Issue__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <inlineHelpText>Indicate all persons who are involved in this Issue</inlineHelpText>
    <label>Team Members</label>
    <type>TextArea</type>
</CustomField>