force-app/main/default/objects/Issue__c/fields/Type_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Issue__c</fullName>
    <inlineHelpText>Categorize the type of problem that caused the Issue.</inlineHelpText>
    <label>Type of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical Problem</fullName>
            </value>
            <value>
                <fullName>Quality Problem</fullName>
            </value>
            <value>
                <fullName>Logistics Problem</fullName>
            </value>
            <value>
                <fullName>Missing feature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>