force-app/main/default/objects/Issue__c/listViews/All_Issues.listView-meta.xml
<ListView>
    <fullName>All_Issues</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Issues</label>
    <language>en_US</language>
</ListView>